--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -1162,7 +1162,7 @@ Container private area not exist
 .IP 62
 \fBvzquota setlimit\fR failed
 .IP 63
-Parameter \fBDISKSPACE\fR not set
+Parameter \fBDISKSPACE\fR not set (or set too high)
 .IP 64
 Parameter \fBDISKINODES\fR not set
 .IP 65
