vzmigrate: skip vzquota ops for ploop CTs
Check if container is on ploop, and set in-script DISK_QUOTA=no,
effectively skipping all vzquota-related operations.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -373,6 +373,11 @@ log 2 "Loading $vzconf and $vpsconf files"
 VE_DUMPFILE="$tmpdir/dump.$VEID"
 VE_QUOTADUMP="$tmpdir/quotadump.$VEID"
 
+# Disable vzquota operations for ploop CT
+if vzlist -H -olayout $VEID | grep ploop; then
+	DISK_QUOTA=no
+fi
+
 log 2 "Check IPs on destination node: $IP_ADDRESS"
 for IP in $IP_ADDRESS; do
 	if [ $($SSH "root@$host" "grep -c \" $IP \" /proc/vz/veip") -gt 0 ];
