vzmigrate.in: fix check for ploop CT
Previous patch left grep spit its match to stdout which we do not want.
Also while at it let's add -w for stricter check.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -374,7 +374,7 @@ VE_DUMPFILE="$tmpdir/dump.$VEID"
 VE_QUOTADUMP="$tmpdir/quotadump.$VEID"
 
 # Disable vzquota operations for ploop CT
-if vzlist -H -olayout $VEID | grep ploop; then
+if vzlist -H -olayout $VEID | grep -wq ploop; then
 	DISK_QUOTA=no
 fi
 
