vzmigrate(8): describe exit code 15
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzmigrate.8.in
+++ b/man/vzmigrate.8.in
@@ -110,6 +110,9 @@ Operation with CT quota failed.
 .TP
 .B 14 EXIT_OVZ_NOT_RUNNING
 OpenVZ is not running, or some required kernel modules are not loaded.
+.TP
+.B 15 EXIT_APPLY_CONFIG
+Unable to set CT name on destination node.
 
 .SH SEE ALSO
 .BR rsync (1).
