vzmigrate: fix ploop check
This is a fix to commit 3f57d8c.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -383,7 +383,7 @@ fi
 
 if [ "$PLOOP" = "yes" ]; then
 	log 2 "Check if ploop is supported on destination node"
-	if ! logexec 2 $SSH "root@$HOST" ploop getdev ; then
+	if ! logexec 2 $SSH "root@$host" ploop getdev ; then
 		log 0 "Destination node don't support ploop, can't migrate"
 		exit $MIG_ERR_UNSUP_PLOOP
 	fi
