vzmigrate: make -vvv add -vv to rsync
Previously, specifying -v 3 times was used to add -v to ssh/scp.
Now with verbosity of 3 we add yet another -v to rsync, so it will show
some more information about which files to consider etc.

To have ssh/scp print debug output, specify -v four times (or -vv
two times etc.)

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -282,6 +282,12 @@ if [ $verbose -gt 1 ]; then
 	VZCTL="$VZCTL --verbose"
 fi
 if [ $verbose -gt 2 ]; then
+	RSYNC_OPTIONS="$RSYNC_OPTIONS -v"
+	VZCTL="$VZCTL --verbose"
+fi
+if [ $verbose -gt 3 ]; then
+	RSYNC_OPTIONS="$RSYNC_OPTIONS -v"
+	VZCTL="$VZCTL --verbose"
 	SSH_OPTIONS="$SSH_OPTIONS -v"
 	SCP_OPTIONS="$SCP_OPTIONS -v"
 fi
