--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -450,6 +450,10 @@ if ! $SSH "root@$host" "mkdir -p $VE_PRIVATE"; then
 	exit $MIG_ERR_COPY
 fi
 
+if [ "$PLOOP" != "yes" ]; then
+	RSYNC1_OPTIONS="--sparse"
+fi
+
 if [ "${DISK_QUOTA}" != "no" ]; then
 	log 1 "Initializing remote quota"
 
@@ -469,7 +473,7 @@ if [ "${DISK_QUOTA}" != "no" ]; then
 fi
 
 log 1 "Syncing private"
-$RSYNC --sparse "$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}"
+$RSYNC $RSYNC1_OPTIONS "$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}"
 # Ignore rsync error 24 "Partial transfer due to vanished source files"
 if [ $? != 24 ] && [ $? != 0 ]; then
 	log 0 "Failed to sync container private areas"
