vzmigrate: add -vvvv since it makes sense now
Use -vvvv to enable ssh/scp debug.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -250,6 +250,9 @@ while [ ! -z "$1" ]; do
 	-vvv)
 		verbose=$((verbose+3))
 		;;
+	-vvvv)
+		verbose=$((verbose+4))
+		;;
 	--remove-area|-r)
 		shift
 		if [ "$1" = "yes" ]; then
