vzctl(8): one more note that ram/swap default is bytes
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -349,7 +349,7 @@ Available suffixes are:
 .br
 \(bu \fBP\fR, \fBp\fR	- memory pages (arch-specific, usually 4KB);
 .br
-\(bu \fBB\fR, \fBb\fR	- bytes.
+\(bu \fBB\fR, \fBb\fR	- bytes (this is the default).
 .PP
 .TP
 \fB--ram\fR \fIbytes\fR
