--- a/man/vzmigrate.8.in
+++ b/man/vzmigrate.8.in
@@ -112,6 +112,9 @@ OpenVZ is not running, or some required kernel modules are not loaded.
 .TP
 .B 15 EXIT_APPLY_CONFIG
 Unable to set CT name on destination node.
+.TP
+.B 16 EXIT_PLOOP_UNSUP
+Ploop is not supported by destination node.
 
 .SH SEE ALSO
 .BR rsync (1).
