vzmigrate: hide errors from vzctl chkpnt --restore if ploop-copy failed
In case ploop-copy failed, we do not know if it succeeded in suspending
CT or not. In case it did, let's try to restore CT, but ignore/hide errors.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -521,7 +521,8 @@ if [ $online -eq 1 ]; then
 		if ! ploop copy -s /dev/$PLOOP_DEV -F "$VZCTL chkpnt $VEID --suspend 1>&2" | \
 				$SSH "root@$host" ploop copy -d $VE_PRIVATE/$TOP_DELTA; then
 			log 0 "Failed to migrate top ploop delta"
-			undo_suspend
+			$VZCTL chkpnt $VEID --resume 2>/dev/null
+			undo_sync
 			exit $MIG_ERR_COPY
 		fi
 	fi
