vzmigrate: add --delete-excluded to rsync
When migrating a CT with ploop, we add --exclude for top delta image file.
The problem is this file can exist on a destination node, and ploop copy
will fail.

Easiest fix is to add --delete-excluded.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -475,7 +475,7 @@ else
 		undo_private
 		exit $MIG_ERR_COPY
 	fi
-	RSYNC1_OPTIONS="--exclude $TOP_DELTA"
+	RSYNC1_OPTIONS="--exclude $TOP_DELTA --delete-excluded"
 fi
 
 if [ "${DISK_QUOTA}" != "no" ]; then
