--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -246,6 +246,27 @@ get_ploop_info() {
 	PLOOP_DEV="${dev}"
 }
 
+# Copy top delta with write tracker and CT stop/suspend
+ploop_copy() {
+	local cmd dev delta cat size
+
+	cmd=$*
+	dev=/dev/$PLOOP_DEV
+	delta=$VE_PRIVATE/$TOP_DELTA
+	# Sanity checks
+	test -b $dev || return 1
+	test -f $delta || return 1
+
+	cat=cat
+	# Use nice progress bar with pv if we can
+	if pv -V >/dev/null 2>&1; then
+		size=$(du -b $delta | awk '{print $1}')
+		test -n "$size" && cat="pv -s $size"
+	fi
+	ploop copy -s $dev -F "$cmd 1>&2" | $cat | \
+		$SSH "root@$host" ploop copy -d $delta
+}
+
 if [ $# -lt 2 ]; then
 	usage
 fi
@@ -518,15 +539,7 @@ if [ $online -eq 1 ]; then
 		fi
 	else
 		log 2 "Copying top ploop delta with CT suspend"
-		# Use nice progress bar with pv if we can
-		CAT=cat
-		if pv -V >/dev/null 2>&1; then
-			SIZE=$(du -b $VE_PRIVATE/$TOP_DELTA | awk '{print $1}')
-			test -n "$SIZE" && CAT="pv -s $SIZE"
-		fi
-		if ! ploop copy -s /dev/$PLOOP_DEV -F "$VZCTL chkpnt $VEID --suspend 1>&2" | \
-				$CAT | \
-				$SSH "root@$host" ploop copy -d $VE_PRIVATE/$TOP_DELTA; then
+		if ! ploop_copy "$VZCTL chkpnt $VEID --suspend"; then
 			log 0 "Failed to copy top ploop delta"
 			$VZCTL chkpnt $VEID --resume 2>/dev/null
 			undo_sync
