vzmigrate: proper rollback for non-live running ploop CT case
If ploop-copy fails, we do not know if CT was stopped or not, so
let's try to start it, ignoring/hiding possible errors.

This is similar to commit 592b228, just for non-live migration case.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -574,14 +574,16 @@ else
 			log 1 "Copying top ploop delta with CT stop"
 			if ! ploop_copy "$VZCTL stop $VEID --skip-umount"; then
 				log 0 "Failed to copy top ploop delta"
+				$VZCTL start $VEID 2>/dev/null
 				undo_sync
 				exit $MIG_ERR_COPY
 			fi
 			log 1 "Unmounting container"
 			if ! logexec 2 $VZCTL umount $VEID ; then
 				log 0 "Failed to umount container"
+				$VZCTL start $VEID 2>/dev/null
 				undo_sync
-	                        exit $MIG_ERR_STOP_SOURCE
+				exit $MIG_ERR_STOP_SOURCE
 			fi
 		fi
 	elif [ "$mounted" = "mounted" ]; then
