--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -53,10 +53,10 @@ vzctl_SOURCES = enter.c \
                 snapshot.c \
                 vzctl-actions.c \
                 vzctl.c
-vzctl_LDADD = $(VZCTL_LIBS) $(DL_LIBS) $(UTIL_LIBS)
+vzctl_LDADD = $(VZCTL_LIBS) $(DL_LIBS) $(UTIL_LIBS) $(PLOOP_LIBS)
 
 vzlist_SOURCES = vzlist.c
-vzlist_LDADD   = $(VZCTL_LIBS)
+vzlist_LDADD   = $(VZCTL_LIBS) $(PLOOP_LIBS)
 
 vzmemcheck_SOURCES = validate.c \
                      vzmemcheck.c
