vzmigrate: do not show rsync2 and 2nd quota times for ploop case
Those are skipped for ploop case, doesn't make sense to show zeroes here.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -653,8 +653,10 @@ if [ $online -eq 1 ]; then
 	log 2 "Times:"
 	log 2 "  Suspend + Dump: " $(get_time $time_suspend $time_copy_dump)
 	log 2 "  Copy dump file: " $(get_time $time_copy_dump $time_rsync2)
-	log 2 "  Second rsync:   " $(get_time $time_rsync2 $time_quota)
-	log 2 "  2nd level quota:" $(get_time $time_quota $time_undump)
+	if [ "$PLOOP" != "yes" ]; then
+		log 2 "  Second rsync:   " $(get_time $time_rsync2 $time_quota)
+		log 2 "  2nd level quota:" $(get_time $time_quota $time_undump)
+	fi
 	log 2 "  Undump + Resume:" $(get_time $time_undump $time_finish)
 	log 2 "Total time: " $(get_time $time_suspend $time_finish)
 
