--- a/man/vzmigrate.8.in
+++ b/man/vzmigrate.8.in
@@ -9,7 +9,7 @@ vzmigrate \- migrate a container between two OpenVZ servers
 .OP --ssh=\fIssh_options
 .OP --rsync=\fIrsync_options
 .OP --keep-dst
-.OP --online
+.OP --live
 .OP -t\fR|\fB--times
 .OP -v
 .I destination_address CTID
@@ -19,7 +19,7 @@ This utility is used to migrate a container from one (source) Hardware Node (HN)
 to another (destination) HN. The utility can migrate either stopped or running
 container. For a stopped container, simple CT private area transfer is performed
 (\fBrsync\fR(1) is used for file transfer). For running containers,
-migration may be offline (default) or online.
+either traditional (with CT stop and start) or live migration is possible.
 
 This program uses \fBssh\fR as a transport layer. You will need to put ssh
 public key to destination node and be able to connect to node without
@@ -50,16 +50,19 @@ syncing container private area again in case some error (on container stop for
 example) occurs during first migration attempt.
 
 .TP
-.B --online
-Perform online (zero-downtime) migration: during the migration the container
-hangs for a while and after the migration it continues working as though
-nothing has happened.
+.B --live
+--live
+Perform live migration: instead of restarting a container, checkpoint
+and restore are used, so there is no container downtime or service
+interruption. Additional steps are performed to minimize the time
+when a container is in suspended state.
+Option \fB--online\fR can be used as a backward-compatible alias.
 
 .TP
 \fB-t\fR, \fB--times\fR
-At the end of online migration, output various timings for migration stages
+At the end of live migration, output various timings for migration stages
 that affect total suspended CT time. Note that it only makes sense
-with \fB--online\fR.
+with \fB--live\fR.
 
 .TP
 .B -v
@@ -77,7 +80,7 @@ Migration of CT 101 to \fB192.168.1.130\fR with downtime:
 Online migration of CT 102 to \fB192.168.1.130\fR:
 .PP
 .EX
-   vzmigrate --online 192.168.1.130 102
+   vzmigrate --live 192.168.1.130 102
 .EE
 .SH EXIT STATUS
 .TP
