bash-completion: add remote completion for --ostemplate
Since now vzctl have a feature to download an OS template
right during vzctl create, it makes sense to complete --ostemplate
argument by not only templates in /vz/template/cache, but also by
those available for download.

Use just-added vps-download --list functionality for that.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -146,7 +146,8 @@ _vzctl()
 				# get the template path from the vz.conf
 				local vztmpl=`grep ^TEMPLATE @PKGCONFDIR@/vz.conf | cut -d "=" -f 2`
 				COMPREPLY=( $( compgen -W "$(command ls $vztmpl/cache/*.tar{,.gz,.xz,.bz2} 2>/dev/null |
-						    sed -e "s#^$vztmpl/cache/##" -e 's#\.tar\.*[gbxz2]*$##')" -- $cur ) )
+						    sed -e "s#^$vztmpl/cache/##" -e 's#\.tar\.*[gbxz2]*$##';
+						    @VZLIBDIR@/vps-download --list)" -- $cur ) )
 
 				;;
 			--onboot|--disabled|--noatime|--diskquota)
