--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -87,7 +87,7 @@ _vzctl()
 		--iptables --netdev_add --netdev_del --netif_add --netif_del \
 		--diskquota \
 		--diskspace --diskinodes --quotatime --quotaugidlimit \
-		--noatime --capability --devnodes --devices --applyconfig \
+		--capability --devnodes --devices --applyconfig \
 		--name --ioprio --setmode --meminfo --bootorder --features \
 		--reset_ub"
 	local vzctl_start_opts="--wait --force"
